--- a/app/dockerfile
+++ b/app/dockerfile
@@ -1,17 +1,21 @@
-#Download Python from DockerHub and use it
-FROM python:3.7.4
+# syntax=docker/dockerfile:1.4
+FROM python:3.10-alpine AS builder
 
-#Set the working directory in the Docker container
 WORKDIR /code
+COPY requirements.txt /code
+RUN pip3 install -r requirements.txt
 
-#Copy the dependencies file to the working directory
-COPY requirements.txt .
+COPY . .
 
-#Install the dependencies
-RUN pip install -r requirements.txt
+ENV FLASK_APP hello.py
+ENV FLASK_ENV production
+ENV FLASK_RUN_PORT 80
+ENV FLASK_RUN_HOST 0.0.0.0
 
-#Copy the Flask app code to the working directory
-COPY src/ .
+EXPOSE 1080
 
-#Run the container
-CMD [ "python", "./app.py" ]
+CMD ["flask", "run"]
+
+FROM builder AS dev-envs
+
+CMD ["flask", "run"]
