--- a/chart/templates/secret.yaml
+++ b/chart/templates/secret.yaml
@@ -4,8 +4,8 @@ metadata:
   name: credsecret
 type: Opaque
 data:
-  username: {{ .Values.mariadb.auth.username | b64enc }}
-  password: {{ .Values.mariadb.auth.username | b64enc }}
-  rootpassword: {{ .Values.mariadb.auth.rootPassword | b64enc }}
+  username: {{ .Values.back.auth.username | b64enc }}
+  password: {{ .Values.back.auth.username | b64enc }}
+  rootpassword: {{ .Values.back.auth.rootPassword | b64enc }}
 
 
