--- a/chart/templates/flask.yaml
+++ b/chart/templates/flask.yaml
@@ -18,7 +18,7 @@ spec:
         tier: frontend
     spec:
       containers:
-      - image: {{ .Values.flask.image }}
+      - image: {{ .Values.front.image }}
         name: flask
         env:
         - name: MYSQL_HOST
@@ -39,7 +39,7 @@ spec:
               name: credsecret
               key: rootpassword
         - name: MYSQL_DATABASE
-          value: {{ .Values.mariadb.auth.database }}
+          value: {{ .Values.back.auth.database }}
         ports:
         - containerPort: 80
           name: flask
