--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -29,6 +29,6 @@ jobs:
       - 
         id: plan
         name: Terraform Apply
-        run: terraform -chdir=terraform/ plan
+        run: terraform -chdir=terraform/ apply --auto-approve
       - 
         run: echo ${{ steps.plan.outputs.docker_repository }}
