--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -17,6 +17,8 @@ jobs:
       TF_VAR_GCP_PROJECT_ID: ${{ vars.GOOGLE_PROJECT }}
       TF_VAR_GCP_PROJECT_REGION: ${{ vars.GOOGLE_REGION }}
       TF_VAR_GCP_PROJECT_ZONE: ${{ vars.GOOGLE_ZONE }}
+    output:
+      repo: ${{ steps.output.outputs.test }}  
     steps:
       - 
         name: Checkout repository
@@ -31,6 +33,7 @@ jobs:
       - 
         id: tfapply
         name: Terraform Apply
-        run: terraform -chdir=terraform/ apply --auto-approve
+        run: terraform -chdir=terraform/ outpus --auto-approve
       - 
-        run: echo ${{ steps.tfapply.outputs.docker_repository }}
+        id: output
+        run: echo "test=$(terraform -chdir=terraform/ output docker_repository)" >> $GITHUB_OUTPUT
