--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -48,7 +48,7 @@ jobs:
       - 
         name: Auth repo
         run: |-
-          cat terraform/testkey.json | docker login -u _json_key --password-stdin \ https://${{ needs.terraform.outputs.repo }}
+          echo ${{ env.GOOGLE_CREDENTIALS }} | docker login -u _json_key --password-stdin \ https://${{ needs.terraform.outputs.repo }}
       - 
         name: build
         run: docker build -t ${{ needs.terraform.outputs.repo }}/ ${{ env.IMAGE }}:$(cat app/__version__) app/
