--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -48,10 +48,10 @@ jobs:
       - 
         name: Auth repo
         run: |-
-          echo ${{ env.GOOGLE_CREDENTIALS }} | docker login -u _json_key --password-stdin \ https://${{ needs.terraform.outputs.repo }}
+          echo ${{ env.GOOGLE_CREDENTIALS }} | docker login -u _json_key --password-stdin \ {{ needs.terraform.outputs.repo }}
       - 
         name: build
-        run: docker build -t ${{ needs.terraform.outputs.repo }}/ ${{ env.IMAGE }}:$(cat app/__version__) app/
+        run: docker build -t ${{ needs.terraform.outputs.repo }}/${{ env.IMAGE }}:$(cat app/__version__) app/
       - 
         name: push
-        run:  docker push ${{ needs.terraform.outputs.repo }}/ ${{ env.IMAGE }}:$(cat app/__version__)
+        run:  docker push ${{ needs.terraform.outputs.repo }}/${{ env.IMAGE }}:$(cat app/__version__)
