--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -48,10 +48,13 @@ jobs:
       - 
         name: build
         run: docker build -t ${{ needs.terraform.outputs.repo }}/${{ env.IMAGE }}:$(cat app/__version__) app/
-      - 
-        name: Auth repo
-        run: |
-          echo ${{ secrets.GCP_ACCESS_TOKEN }} | docker login -u _json_key --password-stdin "https://us-central1-docker.pkg.dev/fun-with-gcp-386305/repository"
+      -
+        name: Login to GCR
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ needs.terraform.outputs.repo }}
+          username: _json_key
+          password: ${{ secrets.GCP_ACCESS_TOKEN }}
       - 
         name: push
         run:  docker push ${{ needs.terraform.outputs.repo }}/${{ env.IMAGE }}:$(cat app/__version__)
