--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -52,9 +52,9 @@ jobs:
         name: Login to GCR
         uses: docker/login-action@v2
         with:
-          registry: gcr.io
+          registry: us-central1-docker.pkg.dev/fun-with-gcp-386305/repository
           username: _json_key
           password: ${{ secrets.GCP_ACCESS_TOKEN }}
       - 
         name: push
-        run:  docker push ${{ needs.terraform.outputs.repo }}/${{ env.IMAGE }}:$(cat app/__version__)
+        run:  docker push us-central1-docker.pkg.dev/fun-with-gcp-386305/repository/overweight-hello:1.1
