--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -52,7 +52,7 @@ jobs:
         name: Login to GCR
         uses: docker/login-action@v2
         with:
-          registry: us-central1-docker.pkg.dev/fun-with-gcp-386305/repository
+          registry: {{ needs.terraform.outputs.repo }}
           username: _json_key
           password: ${{ secrets.GCP_ACCESS_TOKEN }}
       - 
