--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,6 +12,25 @@ env:
   IMAGE: overweight-hello
 
 jobs:
+  job1:
+    runs-on: ubuntu-latest
+    # Map a step output to a job output
+    outputs:
+      output1: ${{ steps.step1.outputs.test }}
+      output2: ${{ steps.step2.outputs.test }}
+    steps:
+      - id: step1
+        run: echo "test=hello" >> "$GITHUB_OUTPUT"
+      - id: step2
+        run: echo "test=world" >> "$GITHUB_OUTPUT"
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+      - env:
+          OUTPUT1: ${{needs.job1.outputs.output1}}
+          OUTPUT2: ${{needs.job1.outputs.output2}}
+        run: echo "$OUTPUT1 $OUTPUT2"
   terraform:
     runs-on: ubuntu-latest
     env:
@@ -52,7 +71,7 @@ jobs:
         name: Login to GCR
         uses: docker/login-action@v2
         with:
-          registry: ${{ needs.terraform.outputs.repo }}
+          registry: us-central1-docker.pkg.dev/fun-with-gcp-386305/repository
           username: _json_key
           password: ${{ secrets.GCP_ACCESS_TOKEN }}
       - 
