--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -55,7 +55,7 @@ jobs:
         run: terraform -chdir=terraform/ apply --auto-approve
       - 
         id: output
-        run: echo "test=$(terraform -chdir=terraform/ output docker_repository)" >> $GITHUB_OUTPUT
+        run: echo "test=$(terraform -chdir=terraform/ output -raw docker_repository)" >> $GITHUB_OUTPUT
   push_to_registry:
     name: build and push app
     runs-on: ubuntu-latest
@@ -71,7 +71,7 @@ jobs:
         name: Login to GCR
         uses: docker/login-action@v2
         with:
-          registry: us-central1-docker.pkg.dev/fun-with-gcp-386305/repository
+          registry: ${{ needs.terraform.outputs.repo }}
           username: _json_key
           password: ${{ secrets.GCP_ACCESS_TOKEN }}
       - 
