--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,25 +12,6 @@ env:
   IMAGE: overweight-hello
 
 jobs:
-  job1:
-    runs-on: ubuntu-latest
-    # Map a step output to a job output
-    outputs:
-      output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
-    steps:
-      - id: step1
-        run: echo "test=hello" >> "$GITHUB_OUTPUT"
-      - id: step2
-        run: echo "test=world" >> "$GITHUB_OUTPUT"
-  job2:
-    runs-on: ubuntu-latest
-    needs: job1
-    steps:
-      - env:
-          OUTPUT1: ${{needs.job1.outputs.output1}}
-          OUTPUT2: ${{needs.job1.outputs.output2}}
-        run: echo "$OUTPUT1 $OUTPUT2"
   terraform:
     runs-on: ubuntu-latest
     env:
@@ -57,7 +38,7 @@ jobs:
         id: output
         run: echo "test=$(terraform -chdir=terraform/ output -raw docker_repository)" >> $GITHUB_OUTPUT
   push_to_registry:
-    name: build and push app
+    name: Package app in Docker and push to registry
     runs-on: ubuntu-latest
     needs: terraform
     steps:
@@ -76,4 +57,4 @@ jobs:
           password: ${{ secrets.GCP_ACCESS_TOKEN }}
       - 
         name: push
-        run:  docker push us-central1-docker.pkg.dev/fun-with-gcp-386305/repository/overweight-hello:1.1
+        run:  docker push ${{ needs.terraform.outputs.repo }}/${{ env.IMAGE }}:$(cat app/__version__)
