--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -88,7 +88,7 @@ jobs:
       - 
         id: 'get-credentials'
         uses: 'google-github-actions/get-gke-credentials@v1'
-        with
+        with:
           cluster_name: ${{ needs.terraform.outputs.cluster }}
           project_id: ${{ vars.GOOGLE_PROJECT }}
           location: ${{ vars.GOOGLE_ZONE }}
