--- a/chart/templates/flask_svc.yaml
+++ b/chart/templates/flask_svc.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask
+  name: {{ .Values.front.svcname }}
   labels:
-    app: overweight-hello
+    app: {{ .Chart.Name }}
 spec:
   ports:
     - port: 80
   selector:
-    app: overweight-hello
+    app: {{ .Chart.Name }}
     tier: frontend
   type: LoadBalancer
