--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,9 +1,6 @@
 name: deployment
 
-on:
-  push:
-    branches:
-      - "main"
+on: [push]
 
 env:
   IMAGE: overweight-hello
@@ -45,6 +42,7 @@ jobs:
         id: output2
         run: echo "test=$(terraform -chdir=terraform/ output -raw cluster_name)" >> $GITHUB_OUTPUT
   build_and_push:
+    if: vars.DEPLOY_APP != 'False'
     name: Build docker and push
     runs-on: ubuntu-latest
     needs: terraform
@@ -71,6 +69,7 @@ jobs:
         id: output
         run: echo "test=${{ needs.terraform.outputs.repo }}/${{ env.IMAGE }}:$(cat app/__version__)" >> $GITHUB_OUTPUT
   helm_install:
+    if: vars.DEPLOY_APP != 'False'
     name: Install helm chart
     runs-on: ubuntu-latest
     needs: [terraform, build_and_push]
